Fixed alignment of side-nav-container.
Issue was with grid.css understanding. Had to use media query to set its width to 100%. The side nav container now drops below the text at a certain point.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -279,7 +279,7 @@ footer {
   .content-page-text {
     width: 100%;
   }
-  .secondary-side-nav-container {
+  .span-1-of-4 {
     width: 100%;
   }
 }
